@@ -3,6 +3,9 @@
 
 dialogfe (05 Jan 2005):
 
+  30 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Slightly modified patch from zahna to default to current architecture.
+
   29 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   kernel_args -> bootloader_kernel_args
 
